Fix spacing in catalog page

--- a/src/styles/components/_catalog-bg.scss
+++ b/src/styles/components/_catalog-bg.scss
@@ -9,6 +9,6 @@
   background-size: 1363px 256px;
 
   @include desktop {
-    background-size: 100% 256px;
+    background-size: 100% 290px;
   }
 }
