--- a/src/styles/components/_catalog-card.scss
+++ b/src/styles/components/_catalog-card.scss
@@ -11,8 +11,11 @@
     margin-bottom: $space-m;
 
     @include tablet {
-      width: 325px;
       margin-bottom: 22px;
+    }
+
+    @include desktop {
+      width: 325px;
     }
   }
 
@@ -82,6 +85,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include desktop {
+      align-items: flex-end;
+    }
   }
 
   &__actions {
