--- a/src/styles/general/_input-checkbox.scss
+++ b/src/styles/general/_input-checkbox.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  padding-left: $space-lg;
+  padding-left: 28px;
   cursor: pointer;
 
   &::before {
